--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Django==1.9.1
 Pillow==3.0.0
 PyJWT==1.4.0
 argparse==1.2.1
+django-crispy-forms==1.6.0
 django-extensions==1.6.1
+django-filter==0.12.0
 djangorestframework==3.3.2
 djangorestframework-jwt==1.7.2
 easy-thumbnails==2.3
